--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -3,4 +3,13 @@
 .App {
   height: 100%;
   width: 100%;
+
+  background-color: $bg-main;
+  background-image: url('./bg.png'),
+    linear-gradient(
+      150deg,
+      hsl(0deg 0% 0%) 28%,
+      hsl(248, 100%, 5%) 100%,
+      hsl(257, 100%, 12%) 100%
+    );
 }
