--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -1,1 +1,33 @@
 @import '../../scss/custom';
+
+.Details {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+
+  color: white;
+
+  #planet-container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem;
+
+    #planet-row {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      #planet-text {
+        border: 1px solid green;
+      }
+
+      #planet-planet {
+        border: 1px solid yellow;
+      }
+    }
+  }
+}
