--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -4,30 +4,80 @@
   height: 100%;
   width: 100%;
   margin: 0;
-
+  padding: 0;
   color: white;
 
   #planet-container {
     height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 3rem;
 
     #planet-row {
+      height: 100%;
       width: 100%;
       display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
       #planet-text {
-        border: 1px solid green;
+        background-image: linear-gradient(
+          240deg,
+          hsl(245deg 100% 78%) 46%,
+          hsl(239deg 92% 66%) 101%,
+          hsl(233deg 83% 55%) 100%
+        );
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 5%;
+        width: 100%;
       }
-
       #planet-planet {
-        border: 1px solid yellow;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 5%;
+        animation: planetGrow 0.5s;
       }
     }
+
+    @media (max-width: 799px) {
+      #planet-row {
+        flex-direction: column;
+        #planet-planet {
+          height: 300px;
+          width: 100%;
+        }
+      }
+    }
+    @media (min-width: 800px) {
+      #planet-row {
+        flex-direction: row;
+        #planet-text {
+          height: 100%;
+          min-height: 600px;
+        }
+        #planet-planet {
+          max-width: 800px;
+          max-height: 600px;
+        }
+      }
+    }
+  }
+}
+
+@keyframes planetGrow {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
   }
 }
