--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,27 @@ body,
   width: 100%;
   width: 100vw;
 }
+
+@keyframes planetGrow {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    transform: translateX(-100%);
+  }
+  25% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
