--- a/src/components/home/planets/planets.scss
+++ b/src/components/home/planets/planets.scss
@@ -1,8 +1,7 @@
 @import '../../../scss/custom';
 
 .Planets {
-  height: 100;
-  width: 100%;
+  animation: slideRight 0.7s;
 
   .solar-container {
     width: 100%;
