--- a/src/components/start/start.scss
+++ b/src/components/start/start.scss
@@ -37,6 +37,7 @@
         max-height: 300px;
         max-width: 100%;
         margin-top: 1rem;
+        animation: planetGrow 0.7s;
       }
     }
   }
