--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  color: white;
+  color: $text-white;
 
   #planet-container {
     height: 100%;
@@ -48,7 +48,7 @@
       }
     }
 
-    @media (max-width: 799px) {
+    @media (max-width: 999px) {
       #planet-row {
         flex-direction: column;
         #planet-planet {
@@ -57,7 +57,7 @@
         }
       }
     }
-    @media (min-width: 800px) {
+    @media (min-width: 1000px) {
       #planet-row {
         flex-direction: row;
         #planet-text {
