--- a/src/index.scss
+++ b/src/index.scss
@@ -6,11 +6,21 @@ body,
 #root > div {
   margin: 0;
   height: 100%;
-  height: 100vh;
   width: 100%;
-  width: 100vw;
 }
 
+body {
+  background-color: $bg-main;
+  background-image: url('./bg.png'),
+    linear-gradient(
+      150deg,
+      hsl(0deg 0% 0%) 28%,
+      hsl(248, 100%, 5%) 100%,
+      hsl(257, 100%, 12%) 100%
+    );
+}
+
+// animations
 @keyframes planetGrow {
   0% {
     transform: scale(0);
@@ -22,7 +32,6 @@ body,
     transform: scale(1);
   }
 }
-
 @keyframes slideRight {
   0% {
     transform: translateX(-100%);
@@ -32,5 +41,16 @@ body,
   }
   100% {
     transform: translateX(0%);
+  }
+}
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+  }
+  25% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
   }
 }
