--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -35,7 +35,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        padding: 5%;
+        padding: 1%;
         width: 100%;
       }
       #planet-planet {
@@ -48,6 +48,7 @@
       }
     }
 
+    // Smaller devices
     @media (max-width: 999px) {
       #planet-row {
         flex-direction: column;
@@ -57,15 +58,17 @@
         }
       }
     }
+    // Larger devices
     @media (min-width: 1000px) {
       #planet-row {
         flex-direction: row;
         #planet-text {
+          flex: 1.5;
+          min-width: 650px;
           height: 100%;
-          min-height: 600px;
+          min-height: 700px;
         }
         #planet-planet {
-          max-width: 800px;
           max-height: 600px;
         }
       }
