--- a/src/components/details/facts/facts.scss
+++ b/src/components/details/facts/facts.scss
@@ -3,25 +3,74 @@
 .Facts {
   .planet-title {
     margin: 1rem;
+    text-align: center;
   }
 
   .numbers-container {
-    background-color: #ffffff3f;
-    border-radius: 5px;
-    padding: 0.5rem;
-    div {
+    border-bottom: 1px solid #c3c3c3;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+
+    .Fact {
       text-align: center;
-      border: 1px solid black;
+      margin: 0;
+      padding: 0.5rem 0.7rem;
+      h3 {
+        font-size: 0.9rem;
+      }
     }
   }
 
   .facts-container {
-    background-color: #ffffff3f;
-    border-radius: 5px;
+    margin-top: 0.5rem;
     padding: 0.5rem;
-    div {
-      text-align: center;
-      border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .Fact {
+      margin: 0.2rem;
+      padding: 0.7rem;
+      background-color: #ffffff3f;
+      border-radius: 5px;
+      h3 {
+        font-size: 1.1rem;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+      }
+      .fact-content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        p {
+          font-size: 0.9rem;
+          text-align: center;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 629px) {
+  .facts-container {
+    .Fact {
+      width: 100%;
+      min-width: 250px;
+    }
+  }
+}
+@media (min-width: 630px) {
+  .facts-container {
+    .Fact {
+      width: 32%;
+      min-width: 290px;
     }
   }
 }
