--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -20,10 +20,7 @@
     #planet-row {
       height: 100%;
       width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
+
       #planet-text {
         background-image: linear-gradient(
           240deg,
@@ -51,22 +48,31 @@
     // Smaller devices
     @media (max-width: 999px) {
       #planet-row {
-        flex-direction: column;
+        display: block;
+        #planet-text {
+          padding-bottom: 5%;
+        }
+
         #planet-planet {
           height: 300px;
           width: 100%;
+          padding: 10% 5%;
         }
       }
     }
     // Larger devices
     @media (min-width: 1000px) {
       #planet-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
         flex-direction: row;
         #planet-text {
           flex: 1.5;
           min-width: 650px;
+          min-height: 800px;
           height: 100%;
-          min-height: 700px;
         }
         #planet-planet {
           max-height: 600px;
