--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,7 @@
 $text-white: #fff;
 $text-gray: #7c7c7c;
 $text-black: #000;
+$text-dark: rgb(54, 54, 54) 0;
 
 $link-highlight: #988fff;
 $highlight: #988fff;
