Layout styling and addition credits

--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -63,6 +63,9 @@
     }
     // Larger devices
     @media (min-width: 1000px) {
+      .Details {
+        background: $bg-filter !important;
+      }
       #planet-row {
         display: flex;
         justify-content: space-between;
