--- a/src/components/error/error.scss
+++ b/src/components/error/error.scss
@@ -1,1 +1,32 @@
 @import '../../scss/custom';
+@import '../../scss/custom';
+
+.Error {
+  width: 100%;
+  height: 100%;
+  background: $bg-filter !important;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  hr {
+    width: 350px;
+    color: $text-white;
+  }
+  h2 {
+    color: $text-gray;
+  }
+  p {
+    color: $text-gray;
+    font-size: 0.9rem;
+  }
+  a {
+    text-decoration: none;
+    color: $text-white;
+    &:hover {
+      color: $link-highlight;
+    }
+  }
+}
