--- a/src/index.scss
+++ b/src/index.scss
@@ -10,14 +10,8 @@ body,
 }
 
 body {
-  background-color: $bg-main;
-  background-image: url('./bg.png'),
-    linear-gradient(
-      150deg,
-      hsl(0deg 0% 0%) 28%,
-      hsl(248, 100%, 5%) 100%,
-      hsl(257, 100%, 12%) 100%
-    );
+  background-color: #000 !important;
+  background-image: url('./bg.png');
 }
 
 // animations
