--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -8,3 +8,9 @@ $highlight: #988fff;
 
 $bg-dark: #0d0d0d;
 $bg-main: #000;
+
+$bg-filter: linear-gradient(
+  150deg,
+  rgba(0, 0, 0, 0) 0%,
+  rgba(11, 0, 55, 0.5) 100%
+);
